@startuml

title __TIME_TRACKER's Class Diagram__\n

  namespace  {
    class Clock {
    }
  }
  

  namespace  {
    interface Element {
    }
  }
  

  namespace  {
    class FileManager {
    }
  }
  

  namespace  {
    class FromJsonVisitor {
    }
  }
  

  namespace  {
    class Interval {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class PrinterVisitor {
    }
  }
  

  namespace  {
    class Task {
    }
  }
  

  namespace  {
    class TaskManager {
    }
  }
  

  namespace  {
    class ToJsonVisitor {
    }
  }
  

  namespace  {
    abstract class Tracker {
    }
  }
  

  namespace  {
    interface Visitor {
    }
  }
  

  namespace  {
    interface VisitorPrint {
    }
  }
  

  namespace  {
    interface VisitorRead {
    }
  }
  

  Clock -up-|> java.util.Observable
  FileManager .up.|> Element
  FromJsonVisitor .up.|> VisitorRead
  Interval .up.|> Element
  Interval .up.|> java.util.Observer
  Interval o-- Task : parentTask
  PrinterVisitor .up.|> VisitorPrint
  PrinterVisitor .up.|> java.util.Observer
  PrinterVisitor o-- TaskManager : taskManager
  Task .up.|> Element
  Task -up-|> Tracker
  Task o-- TaskManager : parentProject
  TaskManager .up.|> Element
  TaskManager -up-|> Tracker
  TaskManager o-- TaskManager : parentProject
  ToJsonVisitor .up.|> Visitor
  Tracker .up.|> Element


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
